src/test/resources/trialFiles/valid/overloading.wacc
begin
  int f(string s, pair(int, pair) p) is
    println "1/5";
    return 1
  end
  int f(int i) is
    println "2/5";
    return 1
  end
  bool f(int i, int[][] iarrarr) is
    println "3/5";
    return true
  end
  int[] f() is
    println "4/5";
    int[] iarr = [1, 2];
    return iarr
  end
  char f(string s, pair(int, pair) p, int i) is
    println "5/5";
    return 'c'
  end

  bool g(char[] carr) is
    println "This should print second";
    return true
  end
  bool g(int[][] iarrarr) is
    println "This should print first";
    return false
  end

  pair(int, int) p = newpair(2, 3) ;
  pair(int, pair) q = newpair(1, p);
  int i = call f("H", q);
  i = call f(i);
  int[] iarr = [i];
  int[][] iarrarr = [iarr];
  bool b = call f(i, iarrarr);
  iarr = call f();
  char c = call f("H", q, i);

  int[][] iarrarr2 = [];
  char[] carr = [];
  b = call g(iarrarr2);
  b = call g(carr)
end
